Remove requirements.yaml
Refactor to use {{ if }} blocks instead of requirements.yaml to control child chart deployment.

--- a/stable/weave-scope/charts/weave-scope-agent/templates/clusterrole.yaml
+++ b/stable/weave-scope/charts/weave-scope-agent/templates/clusterrole.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled -}}
 {{- if .Values.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -20,3 +21,4 @@ rules:
     verbs:
       - '*'
 {{- end }}
+{{- end -}}
