--- a/stable/weave-scope/charts/weave-scope-agent/templates/serviceaccount.yaml
+++ b/stable/weave-scope/charts/weave-scope-agent/templates/serviceaccount.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled -}}
 {{- if .Values.rbac.create }}
 apiVersion: v1
 kind: ServiceAccount
@@ -9,3 +10,4 @@ metadata:
   annotations:
     {{- include "weave-scope.annotations" . | indent 4 }}
 {{- end }}
+{{- end -}}
