--- a/stable/weave-scope/charts/weave-scope-frontend/templates/service.yaml
+++ b/stable/weave-scope/charts/weave-scope-frontend/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.enabled -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -18,3 +19,4 @@ spec:
     release: {{ .Release.Name }}
     component: frontend
   type: {{ .Values.global.service.type }}
+{{- end -}}
