add dependency chart overriding values for kube-state-metrics

--- a/stable/datadog/values.yaml
+++ b/stable/datadog/values.yaml
@@ -155,3 +155,12 @@ rbac:
   serviceAccountName: default
 
 tolerations: []
+
+kube-state-metrics:
+  rbac:
+    create: true
+
+    ## Ignored if rbac.create is true
+    serviceAccountName: default
+
+
