--- a/stable/sonatype-nexus/templates/deployment.yaml
+++ b/stable/sonatype-nexus/templates/deployment.yaml
@@ -43,6 +43,8 @@ spec:
             initialDelaySeconds: {{ .Values.service.readinessProbe.initialDelaySeconds }}
             periodSeconds: {{ .Values.service.readinessProbe.periodSeconds }}
             failureThreshold: {{ .Values.service.readinessProbe.failureThreshold }}
+          resources:
+{{ toYaml .Values.resources | indent 12 }}
           volumeMounts:
             - mountPath: /nexus-data
               name: nexus-data-volume
