[stable/external-dns] enable freeform env via secrets, doc cleanup (#2356)
* enable freeform env via secrets, doc cleanup

* Bump version

--- a/stable/external-dns/templates/secret.yaml
+++ b/stable/external-dns/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if or (and .Values.aws.secretKey .Values.aws.accessKey) .Values.cloudflare.apiKey -}}
+{{- if or (and .Values.aws.secret_key .Values.aws.access_key) .Values.cloudflare.api_key .Values.extraEnv -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,5 +13,8 @@ data:
 {{- end }}
 {{- if .Values.cloudflare.apiKey }}
   cloudflare_api_key: {{ .Values.cloudflare.apiKey | b64enc | quote }}
+{{- end }}
+{{- range $key, $value := .Values.extraEnv }}
+  {{ $key }}: {{ $value | b64enc | quote }}
 {{- end }}
 {{- end }}
