--- a/stable/newrelic-infrastructure/values.yaml
+++ b/stable/newrelic-infrastructure/values.yaml
@@ -1,5 +1,5 @@
 # IMPORTANT: Specify your New Relic API key here.
-# licenseKey: 
+# licenseKey:
 
 verboseLog: false
 
@@ -23,38 +23,38 @@ resources:
 # them here
 # podLabels:
 
-# If you wish to provide your own newrelic.yml file include it under config: 
-# the sample config file is included here as an example. Three options have 
+# If you wish to provide your own newrelic.yml file include it under config:
+# the sample config file is included here as an example. Three options have
 # been omitted because they are handled either by variables, or a secret. They
 # are license_key, log_file and verbose.
 # config:
   #
   # New Relic Infrastructure configuration file
   #
-  # Lines that begin with # are comment lines and are ignored by the 
-  # Infrastructure agent. If options have command line equivalents, New Relic 
+  # Lines that begin with # are comment lines and are ignored by the
+  # Infrastructure agent. If options have command line equivalents, New Relic
   # will use the command line option to override any value set in this file.
   #
 
   #
   # Option : display_name
-  # Value  : Hostname to replace the automatically generated hostname for 
+  # Value  : Hostname to replace the automatically generated hostname for
   #          reporting.
   # Default: Automatically generated hostname
   #
-  #display_name: new_name
+  # display_name: new_name
 
   #
   # Option : proxy
-  # Value  : Useful if your firewall rules require the agent to use a 
+  # Value  : Useful if your firewall rules require the agent to use a
   #          proxy URL (HTTP or HTTPS) to communicate with New Relic.
   # Default: none
   #
-  #proxy: https://user:password@hostname:port
+  # proxy: https://user:password@hostname:port
 
   #
   # Option : Optional custom attributes
-  # Use optional key-value pairs to build filter sets, group your results, 
+  # Use optional key-value pairs to build filter sets, group your results,ª
   # annotate your Insights data, etc.
   #
   # custom_attributes:
