Add a value for listing teams to grant secret access to.
Used when rbac.create is true.

--- a/stable/concourse/values.yaml
+++ b/stable/concourse/values.yaml
@@ -536,6 +536,11 @@ credentialManager:
     ##
     # namespacePrefix:
 
+    ## When rbac.create is true, get access to secrets can be granted for each team listed here.
+    ## Ignored if rbac.create is false.
+    teams:
+      - main
+
   ## Configuration for Hashicorp Vault as the Credential Manager.
   ##
   vault:
