--- a/stable/sonarqube/templates/install-plugins.yaml
+++ b/stable/sonarqube/templates/install-plugins.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "sonarqube.fullname" . }}-install-plugins
+  labels:
+    app: {{ template "sonarqube.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 data:
   install_plugins.sh: |-
     cd /opt/sonarqube/extensions/plugins
