--- a/stable/sonarqube/values.yaml
+++ b/stable/sonarqube/values.yaml
@@ -54,7 +54,7 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: ""
+  # storageClass: "-"
   # accessMode: ReadWriteOnce
   # size: 10Gi
 
