--- a/incubator/jaeger/templates/ingress.yaml
+++ b/incubator/jaeger/templates/ingress.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.ingress.enabled -}}
-{{- $serviceName := include "jaeger.name" . -}}
-{{- $servicePort := .Values.service.externalPort -}}
+{{- $serviceName := printf "%s%s" (include "jaeger.fullname" .) "-query" -}}
+{{- $servicePort := .Values.query.service.queryPort -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
