[stable/concourse] Add "worker.podManagementPolicy"

--- a/stable/concourse/templates/worker-statefulset.yaml
+++ b/stable/concourse/templates/worker-statefulset.yaml
@@ -163,3 +163,6 @@ spec:
   updateStrategy:
     type: {{ .Values.worker.updateStrategy }}
 {{- end }}
+{{- if and (eq .Capabilities.KubeVersion.Major "1") (ge .Capabilities.KubeVersion.Minor "7") }}
+  podManagementPolicy: {{ default "OrderedReady" .Values.worker.podManagementPolicy }}
+{{- end }}
