--- a/stable/concourse/values.yaml
+++ b/stable/concourse/values.yaml
@@ -455,6 +455,14 @@ worker:
   ##
   updateStrategy: RollingUpdate
 
+  ## Pod Management strategy (requires Kubernetes 1.7+)
+  ## Ref: https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#pod-management-policies
+  ##
+  ## "OrderedReady" is default. "Parallel" means worker pods will launch or terminate
+  ## in parallel.
+  podManagementPolicy: OrderedReady
+
+
 ## Persistent Volume Storage configuration.
 ## ref: https://kubernetes.io/docs/user-guide/persistent-volumes
 ##
