--- a/incubator/kafka/templates/statefulset.yaml
+++ b/incubator/kafka/templates/statefulset.yaml
@@ -1,3 +1,4 @@
+{{- $configMapName := include "kafka.configmap" . -}}
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
@@ -16,29 +17,29 @@ spec:
         app: {{ include "kafka.name" . | quote }}
         release: {{ .Release.Name | quote }}
     spec:
-      {{ if or .Values.kafkaAntiAffinityEnabled  .Values.zookeeperAntiAffinityEnabled  }}
+      {{- if or .Values.kafkaAntiAffinityEnabled  .Values.zookeeperAntiAffinityEnabled  }}
       affinity:
         podAntiAffinity:
-          {{ if or (eq .Values.kafkaAntiAffinity "hard")  (eq .Values.zookeeperAntiAffinity "hard") }}
+          {{- if or (eq .Values.kafkaAntiAffinity "hard")  (eq .Values.zookeeperAntiAffinity "hard") }}
           requiredDuringSchedulingIgnoredDuringExecution:
-            {{ if and .Values.kafkaAntiAffinityEnabled (eq .Values.kafkaAntiAffinity "hard") }}
+            {{- if and .Values.kafkaAntiAffinityEnabled (eq .Values.kafkaAntiAffinity "hard") }}
             - topologyKey: "kubernetes.io/hostname"
               labelSelector:
                 matchLabels:
                   app: {{ include "kafka.name" . | quote }}
                   release: {{ .Release.Name | quote }}
-            {{ end }}
-            {{ if and .Values.zookeeperAntiAffinityEnabled (eq .Values.zookeeperAntiAffinity "hard") }}
+            {{- end }}
+            {{- if and .Values.zookeeperAntiAffinityEnabled (eq .Values.zookeeperAntiAffinity "hard") }}
             - topologyKey: "kubernetes.io/hostname"
               labelSelector:
                 matchLabels:
                   app: {{ .Values.zookeeperAntiAffinityPodName }}
                   release: {{ .Release.Name | quote }}
-            {{ end }}
-          {{ end }}
-          {{ if or (eq .Values.kafkaAntiAffinity "soft") (eq .Values.zookeeperAntiAffinity "soft") }}
+            {{- end }}
+          {{- end }}
+          {{- if or (eq .Values.kafkaAntiAffinity "soft") (eq .Values.zookeeperAntiAffinity "soft") }}
           preferredDuringSchedulingIgnoredDuringExecution:
-            {{ if and .Values.kafkaAntiAffinityEnabled (eq .Values.kafkaAntiAffinity "soft") }}
+            {{- if and .Values.kafkaAntiAffinityEnabled (eq .Values.kafkaAntiAffinity "soft") }}
             - weight: 1
               podAffinityTerm:
                 topologyKey: "kubernetes.io/hostname"
@@ -46,34 +47,30 @@ spec:
                   matchLabels:
                     app: {{ include "kafka.name" . | quote }}
                     release: {{ .Release.Name | quote }}
-            {{ end }}
-            {{ if and .Values.zookeeperAntiAffinityEnabled (eq .Values.zookeeperAntiAffinity "soft") }}
+            {{- end }}
+            {{- if and .Values.zookeeperAntiAffinityEnabled (eq .Values.zookeeperAntiAffinity "soft") }}
             - weight: 1
               podAffinityTerm:
                 topologyKey: "kubernetes.io/hostname"
                 labelSelector:
                   matchLabels:
                     app: {{ .Values.zookeeperAntiAffinityPodName }}
-            {{ end }}
-          {{ end }}
-      {{ end }}
+            {{- end }}
+          {{- end }}
+      {{- end }}
       containers:
       - name: {{ template "kafka.name" . }}-broker
         image: "{{ .Values.image }}:{{ .Values.imageTag }}"
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         livenessProbe:
-          exec:
-            command:
-              - bin/kafka-topics.sh
-              - --zookeeper
-              - {{ template "zookeeper.url" . }}
-              - --list
+          tcpSocket:
+            port: 9092
           initialDelaySeconds: 30
           timeoutSeconds: 5
         readinessProbe:
           exec:
             command:
-              - bin/kafka-topics.sh
+              - kafka-topics
               - --zookeeper
               - {{ template "zookeeper.url" . }}
               - --list
@@ -84,10 +81,37 @@ spec:
           name: kafka
         resources:
 {{ toYaml .Values.resources | indent 10 }}
+        env:
+        - name: KAFKA_ADVERTISED_LISTENERS
+          valueFrom:
+            configMapKeyRef:
+              name: "{{ $configMapName }}"
+              key: advertised.listeners
+        - name: KAFKA_ZOOKEEPER_CONNECT
+          valueFrom:
+            configMapKeyRef:
+              name: "{{ $configMapName }}"
+              key: zookeeper.connect
+        - name: KAFKA_LOG_DIRS
+          valueFrom:
+            configMapKeyRef:
+              name: "{{ $configMapName }}"
+              key: log.dirs
+        {{- range $configName := (keys .Values.configurationOverrides) }}
+        - name: KAFKA_{{ $configName | replace "." "_" | upper }}
+          valueFrom:
+            configMapKeyRef:
+              name: "{{ $configMapName }}"
+              key: {{ $configName }}
+        {{- end }}
+        # This is required because the Downward API does not yet support identification of
+        # pod numbering in statefulsets. Thus, we are required to specify a command which
+        # allows us to extract the pod ID for usage as the Kafka Broker ID.
+        # See: https://github.com/kubernetes/kubernetes/issues/31218
         command:
         - sh
         - -c
-        - "./bin/kafka-server-start.sh config/server.properties --override zookeeper.connect={{ template "zookeeper.url" . }}/ --override log.dirs={{ printf "%s/logs" .Values.dataDirectory }} --override broker.id=${HOSTNAME##*-}"
+        - export KAFKA_BROKER_ID=$(hostname | grep -o "[[:digit:]]*$") && /etc/confluent/docker/run
         volumeMounts:
         - name: datadir
           mountPath: "{{ .Values.dataDirectory }}"
