--- a/stable/neo4j/templates/readreplicas-deployment.yaml
+++ b/stable/neo4j/templates/readreplicas-deployment.yaml
@@ -12,6 +12,7 @@ spec:
   selector:
     matchLabels:
       app: {{ template "neo4j.name" . }}
+      release: {{ .Release.Name }}
       component: replica
   replicas: {{ .Values.readReplica.numberOfServers }}
   template:
