--- a/incubator/gocd/values.yaml
+++ b/incubator/gocd/values.yaml
@@ -71,6 +71,7 @@ server:
     subpath:
       godata: godata
       homego: homego
+      dockerEntryPoint: scripts
 
 agent:
   # agent.replicaCount is the GoCD Agent replicas Count. Specify the number of GoCD agents to run
