Support specifying extra environment variables which are passed to the server * This is useful to specify GOCD_PLUGIN_INSTALL_<plugin_name> environment variable

--- a/incubator/gocd/templates/gocd-server-deployment.yaml
+++ b/incubator/gocd/templates/gocd-server-deployment.yaml
@@ -38,6 +38,7 @@ spec:
             - name: GO_SERVER_SYSTEM_PROPERTIES
               value: {{ .Values.server.env.goServerSystemProperties }}
             {{- end }}
+{{ toYaml .Values.server.env.extraEnvVars | indent 12 }}
           ports:
             - containerPort: 8153
             - containerPort: 8154
