--- a/incubator/gocd/values.yaml
+++ b/incubator/gocd/values.yaml
@@ -39,6 +39,10 @@ server:
   env:
     # server.env.goServerSystemProperties is the GoCD Server system properties
     goServerSystemProperties:
+    #  server.env.extraEnvVars is the list of environment variables passed to GoCD Server
+    extraEnvVars:
+#      - name: GOCD_PLUGIN_INSTALL_kubernetes-elastic-agents
+#        value: https://github.com/gocd/kubernetes-elastic-agents/releases/download/v0.0.1/kubernetes-elastic-agent-0.0.1-0.jar
   service:
     # server.service.type is the GoCD Server service type
     type: "NodePort"
