--- a/incubator/kafka/templates/statefulset.yaml
+++ b/incubator/kafka/templates/statefulset.yaml
@@ -82,11 +82,10 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         env:
-        - name: KAFKA_ADVERTISED_LISTENERS
+        - name: POD_IP
           valueFrom:
-            configMapKeyRef:
-              name: "{{ $configMapName }}"
-              key: advertised.listeners
+            fieldRef:
+              fieldPath: status.podIP
         - name: KAFKA_ZOOKEEPER_CONNECT
           valueFrom:
             configMapKeyRef:
@@ -111,7 +110,10 @@ spec:
         command:
         - sh
         - -c
-        - export KAFKA_BROKER_ID=$(hostname | grep -o "[[:digit:]]*$") && /etc/confluent/docker/run
+        - |
+          export KAFKA_BROKER_ID=${HOSTNAME##*-} && \
+          export KAFKA_ADVERTISED_LISTENERS="PLAINTEXT://${POD_IP}:9092" && \
+          /etc/confluent/docker/run
         volumeMounts:
         - name: datadir
           mountPath: "{{ .Values.dataDirectory }}"
