--- a/incubator/ibm-blockchain-network/templates/blockchain.yaml
+++ b/incubator/ibm-blockchain-network/templates/blockchain.yaml
@@ -23,14 +23,15 @@ spec:
         - sh
         - -c
         - |
-          cryptogen generate --config /sampleconfig/crypto-config.yaml
+          cryptogen generate --config /sampleconfig/crypto-config.yaml &&
           cp -r crypto-config /shared/
+
           for file in $(find /shared/ -iname *_sk); do
             dir=$(dirname $file); mv ${dir}/*_sk ${dir}/key.pem
           done
 
-          find /shared -type d | xargs chmod a+rx
-          find /shared -type f | xargs chmod a+r
+          find /shared -type d | xargs chmod a+rx &&
+          find /shared -type f | xargs chmod a+r &&
           touch /shared/status_cryptogen_complete
     volumeMounts:
     - mountPath: /shared
@@ -43,21 +44,22 @@ spec:
       - -c
       - |
         sleep 1
+
         while [ ! -f /shared/status_cryptogen_complete ]; do
           echo Waiting for cryptogen
           sleep 1
         done
 
-        echo 'sample config is =>'
-        ls /sampleconfig
-        cp /sampleconfig/configtx.yaml /shared/configtx.yaml
-        echo 'shared after copy is =>'
-        ls /shared
-        cd /shared/
-        configtxgen -profile TwoOrgsOrdererGenesis -outputBlock orderer.block
-        find /shared -type d | xargs chmod a+rx
-        find /shared -type f | xargs chmod a+r
-        touch /shared/status_configtxgen_complete
+        echo 'sample config is =>' &&
+        ls /sampleconfig &&
+        cp /sampleconfig/configtx.yaml /shared/configtx.yaml &&
+        echo 'shared after copy is =>' &&
+        ls /shared &&
+        cd /shared/ &&
+        configtxgen -profile TwoOrgsOrdererGenesis -outputBlock orderer.block &&
+        find /shared -type d | xargs chmod a+rx &&
+        find /shared -type f | xargs chmod a+r &&
+        touch /shared/status_configtxgen_complete &&
         rm -f /shared/status_cryptogen_complete
     env:
      - name: PEERHOST1
@@ -85,16 +87,20 @@ spec:
       - -c
       - |
         sleep 1
+        echo "Starting bootstrap"
+
         while [ ! -f /shared/status_configtxgen_complete ]; do
           echo Waiting for configtxgen
           sleep 1
         done
 
-        cp -r /sampleconfig/cas /shared
-        touch /shared/bootstrapped
-        rm -f /shared/status_configtxgen_complete
-        mkdir -p /home/composer
-        chown 100 /home/composer
+        echo \"Starting bootstrap\" &&
+        cp -r /sampleconfig/cas /shared &&
+        echo \"Done copying\" &&
+        touch /shared/bootstrapped &&
+        rm -f /shared/status_configtxgen_complete &&
+        mkdir -p /home/composer/.composer &&
+        chown 1000 /home/composer/.composer &&
         echo 'Done with bootstrapping'
     volumeMounts:
     - mountPath: /shared
@@ -127,12 +133,13 @@ spec:
           - -c
           - |
             sleep 1
+
             while [ ! -f /shared/bootstrapped ]; do
               echo Waiting for bootstrap
               sleep 1
             done
 
-            touch /shared/status_orderer_complete
+            touch /shared/status_orderer_complete &&
             orderer
         env:
         - name: ORDERER_CFG_PATH
@@ -199,12 +206,13 @@ spec:
         - -c
         - |
           sleep 1
+          
           while [ ! -f /shared/bootstrapped ]; do
             echo Waiting for bootstrap
             sleep 1
           done
 
-          touch /shared/status_fabricca_complete
+          touch /shared/status_fabricca_complete &&
           fabric-ca-server start -c ${CONFIGYAML}
         env:
         - name: CONFIGYAML
@@ -256,12 +264,13 @@ spec:
           - -c
           - |
             sleep 1
+
             while [ ! -f /shared/bootstrapped ]; do
               echo Waiting for bootstrap
               sleep 1
             done
 
-            touch /shared/status_org1peer1_complete
+            touch /shared/status_org1peer1_complete &&
             peer node start --peer-defaultchain=false
         env:
         - name: CORE_PEER_ADDRESSAUTODETECT
@@ -350,12 +359,13 @@ spec:
           - -c
           - |
             sleep 1
+
             while [ ! -f /shared/bootstrapped ]; do
               echo Waiting for bootstrap
               sleep 1
             done
 
-            touch /shared/status_org2peer1_complete
+            touch /shared/status_org2peer1_complete &&
             peer node start --peer-defaultchain=false
         env:
         - name: CORE_PEER_ADDRESSAUTODETECT
