--- a/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org2peer1.yaml
+++ b/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org2peer1.yaml
@@ -1,10 +1,4 @@
 ---
-name: {{ template "ibm-blockchain-chaincode.fullname" . }}-install-org2peer1
-labels:
-  app: {{ template "ibm-blockchain-chaincode.name" . }}
-  chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-  release: {{ .Release.Name }}
-  heritage: {{ .Release.Service }}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -28,10 +22,10 @@ spec:
           echo Waiting for joinchannel
           sleep 2
         done
-        
-        git clone -b v1.0.0 https://github.com/hyperledger/fabric $GOPATH/src/github.com/hyperledger/fabric/
-        peer chaincode install -n ${CHAINCODE_NAME} -v ${CHAINCODE_VERSION} -p github.com/hyperledger/fabric/examples/chaincode/go/chaincode_example02/
-        touch /shared/status_chaincodeinstall_complete
+
+        git clone -b v1.0.0 https://github.com/hyperledger/fabric $GOPATH/src/github.com/hyperledger/fabric/ &&
+        peer chaincode install -n ${CHAINCODE_NAME} -v ${CHAINCODE_VERSION} -p github.com/hyperledger/fabric/examples/chaincode/go/chaincode_example02/ &&
+        touch /shared/status_chaincodeinstall_o2p1_complete
     env:
     - name: CHAINCODE_NAME
       value: example02
