--- a/incubator/ibm-blockchain-chaincode/templates/chaincode_instantiate.yaml
+++ b/incubator/ibm-blockchain-chaincode/templates/chaincode_instantiate.yaml
@@ -1,10 +1,4 @@
 ---
-name: {{ template "ibm-blockchain-chaincode.fullname" . }}-instantiate
-labels:
-  app: {{ template "ibm-blockchain-chaincode.name" . }}
-  chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-  release: {{ .Release.Name }}
-  heritage: {{ .Release.Service }}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -20,18 +14,18 @@ spec:
   - name: chaincodeinstantiate
     image: {{ .Values.blockchain.toolsImage }}
     imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
-    command: 
+    command:
       - sh
       - -c
       - |
-        while [ ! -f /shared/status_chaincodeinstall_complete ]; do
+        while [ ! -f /shared/status_chaincodeinstall_o1p1_complete ] || [ ! -f /shared/status_chaincodeinstall_o2p1_complete ]; do
           echo Waiting for chaincodeinstall
           sleep 2
         done
-        
-        peer chaincode instantiate -o blockchain-orderer:31010 -C ${CHANNEL_NAME} -n ${CHAINCODE_NAME} -v ${CHAINCODE_VERSION} -c '{\"Args\":[\"init\",\"a\",\"100\",\"b\",\"200\"]}'
-        touch /shared/status_chaincodeinstantiate_complete
-        rm -f /shared/status_chaincodeinstall_complete
+
+        peer chaincode instantiate -o blockchain-orderer:31010 -C ${CHANNEL_NAME} -n ${CHAINCODE_NAME} -v ${CHAINCODE_VERSION} -c '{\"Args\":[\"init\",\"a\",\"100\",\"b\",\"200\"]}' &&
+        touch /shared/status_chaincodeinstantiate_complete &&
+        rm -f /shared/status_chaincodeinstall_*_complete
     env:
     - name: CHANNEL_NAME
       value: {{ .Values.blockchain.channelName }}
