--- a/incubator/kafka/Chart.yaml
+++ b/incubator/kafka/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 description: Apache Kafka is publish-subscribe messaging rethought as a distributed
   commit log.
 name: kafka
-version: 0.2.5
+version: 0.2.6
 keywords:
 - kafka
 - zookeeper
@@ -11,10 +11,13 @@ home: https://kafka.apache.org/
 sources:
 - https://github.com/kubernetes/charts/tree/master/incubator/zookeeper
 - https://github.com/Yolean/kubernetes-kafka
-- https://github.com/solsson/dockerfiles/tree/master/kafka
+- https://github.com/confluentinc/cp-docker-images
+- https://github.com/apache/kafka
 maintainers:
 - name: Faraaz Khan
   email: faraaz@rationalizeit.us
 - name: Marc Villacorta
   email: marc.villacorta@gmail.com
+- name: Ben Goldberg
+  email: ben@spothero.com
 icon: https://kafka.apache.org/images/logo.png
