[external-dns] Fix naming in condition for secret

--- a/stable/external-dns/templates/secret.yaml
+++ b/stable/external-dns/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if or (and .Values.aws.secret_key .Values.aws.access_key) .Values.cloudflare.api_key .Values.extraEnv -}}
+{{- if or (and .Values.aws.secretKey .Values.aws.accessKey) .Values.cloudflare.apiKey .Values.extraEnv -}}
 apiVersion: v1
 kind: Secret
 metadata:
