Update redis-sentinel service name to be templated
Need service name to be templated so we can deploy multiple releases in the same namespace.

--- a/stable/redis-ha/templates/redis-sentinel-service.yaml
+++ b/stable/redis-ha/templates/redis-sentinel-service.yaml
@@ -5,7 +5,7 @@ metadata:
     name: {{ template "name" . }}-sentinel-svc
     role: service
 {{ include "labels.standard" . | indent 4 }}
-  name: redis-sentinel
+  name: {{ template "fullname" . }}-sentinel
 spec:
   ports:
     - port: 26379
