--- a/stable/datadog/templates/daemonset.yaml
+++ b/stable/datadog/templates/daemonset.yaml
@@ -36,6 +36,7 @@ spec:
           {{- end }}
           name: dogstatsdport
           protocol: UDP
+          hostPort: 8125
         {{- if .Values.datadog.apmEnabled }}
         - containerPort: 8126
           {{- if .Values.daemonset.useHostPort }}
@@ -57,6 +58,12 @@ spec:
             value: {{ .Values.datadog.logLevel | quote }}
           - name: SD_BACKEND
             value: docker
+          - name: KUBERNETES_LEADER_CANDIDATE
+            value: {{ .Values.datadog.leaderElection | quote}}
+          {{- if .Values.datadog.leaderElection }}
+          - name: KUBERNETES_LEADER_LEASE_DURATION
+            value: {{ default "600" .Values.datadog.leaderLeaseDuration | quote }}
+          {{- end }}
           - name: NON_LOCAL_TRAFFIC
             value: {{ default "" .Values.datadog.nonLocalTraffic | quote }}
           - name: TAGS
