Change bitcoincashd data dir to /root

--- a/incubator/bitcoincashd/templates/deployment.yaml
+++ b/incubator/bitcoincashd/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
           containerPort: {{ .Values.RPCPort }}
         volumeMounts:
         - name: data
-          mountPath: /data
+          mountPath: /root
         {{- if .Values.ssl.enabled }}
         - name: ssl
           mountPath: /etc/bitcoincashd-ssl
