--- a/stable/redis-ha/Chart.yaml
+++ b/stable/redis-ha/Chart.yaml
@@ -5,12 +5,14 @@ keywords:
 - redis
 - keyvalue
 - database
-version: 1.1.0
+version: 2.0.0
 description: Highly available Redis cluster with multiple sentinels and standbys.
 icon: https://upload.wikimedia.org/wikipedia/en/thumb/6/6b/Redis_Logo.svg/1200px-Redis_Logo.svg.png
 maintainers:
   - email: ikaboubi@gmail.com
     name: smileisak
+  - email: ianmaddox@google.com
+    name: ianmaddox
 details:
   This package provides a highly available Redis cluster with multiple sentinels and standbys.
   Note the `redis-master` pod is used for bootstrapping only and can be deleted once
