--- a/stable/redis-ha/templates/redis-sentinel-deployment.yaml
+++ b/stable/redis-ha/templates/redis-sentinel-deployment.yaml
@@ -8,9 +8,17 @@ spec:
     metadata:
       labels:
         app: "redis-ha"
-        name: "redis-sentinel"
+        name: {{ template "fullname" . }}-sentinel
 {{ include "labels.standard" . | indent 8 }}
     spec:
+      {{- if .Values.nodeSelector }}
+      nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 8 }}
+      {{- end }}
+      {{- if .Values.tolerations }}
+      tolerations:
+{{ toYaml .Values.tolerations | indent 8 }}
+      {{- end }}
       containers:
       - name: sentinel
         image: {{ .Values.redis_image }}
@@ -19,5 +27,7 @@ spec:
         env:
           - name: SENTINEL
             value: "true"
+          - name: REDIS_CHART_PREFIX
+            value: {{ template "fullname" . }}-
         ports:
           - containerPort: 26379
