--- a/stable/redis-ha/templates/redis-slave-appliance-vpc.yaml
+++ b/stable/redis-ha/templates/redis-slave-appliance-vpc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-slave-appliance-vpc
+  name: {{ template "fullname" . }}-slave-appliance-vpc
   annotations:
     cloud.google.com/load-balancer-type: "Internal"
 spec:
