--- a/stable/redis-ha/templates/redis-master-appliance-vpc.yaml
+++ b/stable/redis-ha/templates/redis-master-appliance-vpc.yaml
@@ -13,4 +13,5 @@ spec:
     app: "redis-ha"
     redis-node: "true"
     redis-role: "master"
+    release: "{{ .Release.Name }}"
   type: LoadBalancer
